unpackaged/main/default/objects/Xero_API_Settings__c/Xero_API_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Xero API Settings</label>
</CustomObject>