unpackaged/main/default/objects/Xero_API_Settings__c/fields/Webhook_Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Private_Key__c</fullName>
    <label>Webhook Private Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>