unpackaged/main/default/objects/Xero_API_Settings__c/fields/Xero_API_Tokens_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Xero_API_Tokens_Record_Name__c</fullName>
    <label>Xero API Tokens Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>